fixed image not showing

--- a/components/LandingPage/subFolder/Intro.module.css
+++ b/components/LandingPage/subFolder/Intro.module.css
@@ -1,13 +1,14 @@
 .container{
-    /* background-color: red; */
     width: 100%;
-    height: fit-content;
+    height: 600px !important;
+    min-height: 600px !important;
     margin-top: 90px;
     background: var(--background);
     margin-bottom: 50px !important;
     display: flex;
     color: var(--foreground);
     justify-content: flex-start;
+    /* background-color: red; */
     align-items: center;
     padding:  0 2%;
 }
@@ -16,6 +17,7 @@
     height: 100%;
     width: 100%;
     display: flex;
+    flex: 1;
     flex-direction: column;
 }
 .left div{
@@ -122,16 +124,17 @@
 }
 
 .right{
-    /* background-color: blue; */
-    height: 100%;
-    width: 100%;
+    flex: 1 !important;
+    height: 100% !important;
+    width: 100% !important;
     display: flex;
     justify-content: center;
     align-items: center;
+    /* background-color: blue !important; */
 }
 .right .imgDiv{
-    height: 90%;
-    width: 90%;
+    height: 90% !important;
+    width: 90% !important;
     /* background-color: red; */
     position: relative;
 }
@@ -142,7 +145,7 @@
     .container{
         /* background-color: red; */
         width: 90%;
-        /* height: fit-content; */
+        height: fit-content;
         display: flex;
         justify-content: flex-start;
         align-items: center;
